# signal

./: .gitignore  README.md  devbox.json  pyproject.toml  window.py
app/: __main__.py  filter.py  parsing.py  signal_analysis.py
interface/: window.py  window.ui
